--- a/package.json
+++ b/package.json
@@ -47,10 +47,14 @@
   "devDependencies": {
     "@jest/globals": "^29.7.0",
     "@types/node": "^20.12.12",
+    "genkit": "^1.6.2",
     "jest": "^29.7.0",
     "npm-run-all": "^4.1.5",
     "ts-jest": "^29.1.2",
     "tsup": "^8.0.2",
     "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "axios": "^1.9.0"
   }
 }
