--- a/package.json
+++ b/package.json
@@ -44,6 +44,12 @@
     "provenance": true,
     "access": "public"
   },
+  "dependencies": {
+    "axios": "^1.9.0"
+  },
+  "peerDependencies": {
+    "genkit": "^0.9.0 || ^1.0.0"
+  },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
     "@types/node": "^20.12.12",
@@ -53,8 +59,5 @@
     "ts-jest": "^29.1.2",
     "tsup": "^8.0.2",
     "typescript": "^5.4.5"
-  },
-  "dependencies": {
-    "axios": "^1.9.0"
   }
 }
