--- a/package.json
+++ b/package.json
@@ -40,10 +40,6 @@
   "files": [
     "lib"
   ],
-  "publishConfig": {
-    "provenance": true,
-    "access": "public"
-  },
   "dependencies": {
     "axios": "^1.9.0"
   },
@@ -59,5 +55,12 @@
     "ts-jest": "^29.1.2",
     "tsup": "^8.0.2",
     "typescript": "^5.4.5"
-  }
+  },
+  "directories": {
+    "lib": "lib"
+  },
+  "bugs": {
+    "url": "https://github.com/BelfoSamad/genkitx-perplexity-sonar/issues"
+  },
+  "homepage": "https://github.com/BelfoSamad/genkitx-perplexity-sonar#readme"
 }
